[project]
name = "media"
version = "0.1.0"
description = ""
authors = [{ name = "Elliana May", email = "me@mause.me" }]
license = "MIT"
requires-python = "==3.9.*"

dependencies = [
    "sqlalchemy[mypy]==1.4.54",
    "sqlalchemy-repr==0.0.2",
    "aiohttp==3.11.18",
    "backoff==1.10.0",
    "psycopg2-binary",
    "dataclasses-json==0.5.2",
    "sentry-sdk==0.19.5",
    "alembic==1.15.2",
    "plexapi==4.3.1",
    "fuzzywuzzy[speedup]==0.18.0",
    "cachetools==4.2.2",
    "lxml",
    "bs4==0.0.1",
    "eventlet==0.35.2",
    "email-validator==1.1.2",
    "mause-rpc==0.0.18",
    "cffi==1.14.4",
    "fastapi==0.65.2",
    "python-multipart==0.0.18",
    "jwkaas==0.7",
    "aniso8601==8.1.1",
    "pytz==2021.1",
    "uvicorn[standard]",
    "aiofiles==0.6.0",
    "fastapi-utils==0.2.1",
    "asyncache==0.1.1",
    "makefun==1.9.5",
    "exceptiongroup",
    "gunicorn",
    "nyaapy",
    "python-healthchecklib>=0.1.1",
]

[dependency-groups]
dev = [
    "pytest",
    "responses==0.12.1",
    "lxml",
    "pytest-html>=3.1.1",
    "pytest-selenium>=3.0.0",
    "webdriver-manager==3.2.2",
    "pre-commit>=4.2.0",
    "sqlalchemy2-stubs",
    "pytest-snapshot",
    "flake8==3.8.4",
    "factory-boy==3.2.0",
    "isort==5.7.0",
    "pytest-asyncio==0.14.0",
    "async-asgi-testclient==1.4.5",
    "aioresponses==0.7.8",
    "pytest-sugar",
]
debug = ["pudb", "pdbpp"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
